--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2",
+    "@styled-icons/crypto": "^10.47.0",
     "alchemy-sdk": "^2.6.1",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
