--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
+    "@styled-icons/crypto": "^10.47.0",
     "@types/luxon": "^3.2.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
